service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-service
spec:
  selector:
    app: my-spring-boot-app
  ports:
    - protocol: TCP
      port: 80          # port interne du service
      targetPort: 9096  # port du conteneur
      nodePort: 30080   # port exposé sur le nœud Minikube
  type: NodePort
